Angularsaurus: Extend service to use dinosaur types

--- a/angularsaurus/src/app/app.component.html
+++ b/angularsaurus/src/app/app.component.html
@@ -7,9 +7,14 @@
 </div>
 <div style="text-align:center">
   <ul>
-    <li *ngFor="let dino of dinos">
-      {{dino}}
+    <li *ngFor="let name of dinoNames">
+      {{name}}
     </li>
   </ul>
+  <ul>
+      <li *ngFor="let dino of dinos">
+        {{dino.name}}
+      </li>
+    </ul>
 </div>
 
