Angularsaurus and T-Rest: Fetching dinos from T-Rest

--- a/angularsaurus/src/app/app.component.html
+++ b/angularsaurus/src/app/app.component.html
@@ -11,5 +11,10 @@
         {{dino.name}}
       </li>
     </ul>
+    <ul>
+        <li *ngFor="let dino of dinosFromTRest">
+          {{dino.name}}
+        </li>
+      </ul>
 </div>
 
