--- a/angularsaurus/src/app/dinos-overview.component.html
+++ b/angularsaurus/src/app/dinos-overview.component.html
@@ -1,7 +1,7 @@
 <div>
     <ul class="dinoOverview">
         <li *ngFor="let dino of dinosFromTRest" (click)="onclick(dino)">
-            <span class="dinoId">{{dino.id}}</span> {{dino.name}}
+            <a routerLink='dino/{{dino.id}}'><span class="dinoId">{{dino.id}}</span> {{dino.name}}</a>
             <br />
         </li>
     </ul>
