Angularsaurus: all components 'work'

--- a/angularsaurus/src/app/dinos-overview.component.html
+++ b/angularsaurus/src/app/dinos-overview.component.html
@@ -1,7 +1,7 @@
 <div>
     <ul class="dinoOverview">
         <li *ngFor="let dino of dinosFromTRest" (click)="onclick(dino)">
-            <a routerLink='dino/{{dino.id}}'><span class="dinoId">{{dino.id}}</span> {{dino.name}}</a>
+            <a routerLink='dinodetails/{{dino.id}}'><span class="dinoId">{{dino.id}}</span> {{dino.name}}</a>
             <br />
         </li>
     </ul>
