Angularsaurus: Using new random service

--- a/angularsaurus/src/app/app.component.html
+++ b/angularsaurus/src/app/app.component.html
@@ -5,3 +5,4 @@
 <nav><a routerLink="/dinos">Dino-Übersicht</a>
      <a routerLink="/new-dino">Neuer Dino</a></nav>
 <router-outlet></router-outlet>
+<app-random-dino></app-random-dino>
